@@ -245,6 +245,9 @@ Trunk (unreleased changes)
 73. HADOOP-1271.  Fix StreamBaseRecordReader to be able to log record 
     data that's not UTF-8.  (Arun C Murthy via tomwhite)
 
+74. HADOOP-1190.  Fix unchecked warnings in main Hadoop code.  
+    (tomwhite)
+
 
 Release 0.12.3 - 2007-04-06
 
